2005-08-03  Vicki Murley  <vicki@apple.com>

        Reviewed by Beth and Hyatt.
 
	<rdar://problem/4196646> target returns text node when it should return the parent node

        Test cases added: manual-tests/mouseevents-on-textnodes.html

        * khtml/khtmlview.cpp:
        (KHTMLView::dispatchMouseEvent): if the targetNode is a text node, set the 
	targetNode to the parent node

2005-08-02  Bruce DiBello  <bdibello@apple.com>

        Reviewed by Geoffrey Garen.

        Test cases added: getting and setting button.value

        * layout-tests/fast/dom/HTMLButtonElement/value/getset-expected.txt: Added.
        * layout-tests/fast/dom/HTMLButtonElement/value/getset.html: Added.

2005-08-01  Geoffrey Garen  <ggaren@apple.com>

        - landed layout tests for fix to <rdar://problem/3572585> 
        window.open fails if name param = the name of a window just 
        closed in same function

        Fix reviewed by darin.

        Test cases added:

        * manual-tests/open-after-close.html: Added.
        * manual-tests/resources/open-after-close-popup.html: Added.

2005-08-01  David Hyatt  <hyatt@apple.com>

	Reviewed by cblu, kocienda, darin

	This patch removes the old KWQCheckbox from the tree and enables the new
	checkbox handled by the engine.
	
        * ForwardingHeaders/qcheckbox.h: Removed.
        Removed the old header for the Qt checkbox class.
	
	* WebCore.xcodeproj/project.pbxproj:
        Removed the references to KWQCheckBox from the project.
	
	* khtml/css/html4.css:
        Turn on the -khtml-appearance property for checkboxes so that they have
	the native OS X look by default.
	
	* khtml/html/html_formimpl.cpp:
        (DOM::HTMLInputElementImpl::setType):
        (DOM::HTMLInputElementImpl::setInputType):
        Change the setting of the type property in the DOM to simply update the
	corresponding attribute.  setType is the "public" API now and
	setInputType is the one called internally, e.g., when the attribute is
	changed.
	